# prop-firm-pilot

./: .coverage  .env.example  .gitignore  AGENTS.md  close_all.py  fix.py  fix2.py  fix3.py  fix_e8_one.py  fix_final.py  fix_pos.py  fix_syntax.py  manual_check_mtr.py  pyproject.toml  rewrite_docs.py  test_balance.py  test_e2e_execution.py  test_e2e_mock.py  test_e2e_real_scanner.py  test_e8_one.py  test_matchtrader_e8_one.py
config/: default.yaml  e8_one_5k_challenge.yaml  e8_signature_50k.yaml  e8_trial_5k.yaml
data/: alpha158_fx_ic_ir_report.csv  decisions.db-shm  decisions.db-wal  trade_journal.jsonl
docs/: E8_Markets_Analysis_2026.md  Hybrid_EA_LLM_Architecture.md  Hybrid_EA_LLM_Architecture_zh-TW.md  Phase1_Analysis_Report.md  Quant_Projects_PropFirm_Integration_Report_v3.md  ops_runbook.md
eval_results/EURUSD/TradingAgentsStrategy_logs/: full_states_log_2026-02-12.json
eval_results/XAUUSD/TradingAgentsStrategy_logs/: full_states_log_2026-02-12.json
scripts/: analyze_alpha158_fx.py  close_all.py  test_api_connectivity.py  test_telegram_bot_live.py  test_telegram_live.py  test_trade.py
src/: __init__.py  config.py  main.py
src/compliance/: __init__.py  best_day_tracker.py  drawdown_monitor.py  prop_firm_guard.py
src/compliance/rule_scraper/: base.py  e8_scraper.py
src/data/: __init__.py  fx_data_fetcher.py  fx_duckdb_store.py  fx_to_qlib.py
src/decision/: __init__.py  agent_bridge.py  decision_formatter.py  fx_analyst_config.py  schemas.py
src/decision_store/: __init__.py  janitor.py  sqlite_store.py
src/execution/: __init__.py  engine.py  instrument_registry.py  matchtrader_client.py  order_manager.py  position_sizer.py
src/monitor/: __init__.py  alert_service.py  equity_monitor.py  memory_journal.py  telegram_bot.py  trade_journal.py
src/research/: __init__.py  alpha158_evaluator.py  rdagent_bridge.py
src/scheduler/: __init__.py  scheduler.py
src/signal/: __init__.py  scanner_bridge.py  signal_formatter.py
tests/: __init__.py  run_daily_cycle_mock.py  test_alert_service.py  test_alpha158_evaluator.py  test_decision_store.py  test_engine.py  test_instrument_registry.py  test_integration.py  test_matchtrader_client.py  test_memory_journal.py  test_position_sizer.py  test_prop_firm_guard.py  test_prop_firm_guard_e8_one.py  test_scanner_bridge.py  test_scheduler.py  test_schemas.py  verify_phase1b.py
tests/fixtures/scanner/: signals_malformed.csv  signals_multiday.csv  signals_sample.csv  signals_single.csv
tmp/: network-after-login.txt
