[project]
name = "prop-firm-pilot"
version = "0.1.0"
description = "Fully automated FX trading system for E8 Markets prop firm accounts"
requires-python = ">=3.10,<3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "pyyaml>=6.0.1",
  "loguru>=0.7.2",
  "python-dotenv>=1.0.1",
  "duckdb>=1.1.3",
  "pandas>=2.0.3,<2.1",
  "numpy>=1.21.0,<1.24",
  "pyqlib==0.9.7",
  "dropbox>=12.0.2",
  "apscheduler>=3.10.4",
  "curl-cffi>=0.14.0",
  # TradingAgents Dependencies
  "langchain>=0.3.15",
  "langchain-anthropic>=0.3.15",
  "langchain-experimental>=0.3.4",
  "langchain-google-genai>=2.1.5",
  "langchain-openai>=0.3.23",
  "langgraph>=0.4.8",
  "akshare>=1.16.98",
  "backtrader>=1.9.78.123",
  "chainlit>=2.5.5",
  "chromadb>=1.0.12",
  "eodhd>=1.0.32",
  "feedparser>=6.0.11",
  "finnhub-python>=2.4.23",
  "praw>=7.8.1",
  "pytz>=2025.2",
  "redis>=6.2.0",
  "requests>=2.32.4",
  "setuptools>=80.9.0",
  "stockstats>=0.6.5",
  "tqdm>=4.67.1",
  "tushare>=1.4.21",
  "typing-extensions>=4.14.0",
  "yfinance>=0.2.63",
  "aiogram>=3.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.0",
  "ruff>=0.1.0",
  "respx>=0.21.0",
]

[project.scripts]
prop-firm-pilot = "src.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
